tests/rt/neg/ifc/decl.picox
let val x = 42 raisedTo `<alice&bob;#root-integrity>`
    val z = `<alice;#root-integrity>`
    val aliceAuthority = attenuate (authority, `<alice;#root-integrity>`)
    val bobAuthority = attenuate(authority, `<bob;#root-integrity>`)    
    val y = declassify (x, aliceAuthority, z)
in ()
end
